--- a/src/views/javafx/window.fxml
+++ b/src/views/javafx/window.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.javafx.ProductView">
    <children>
       <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="300.0" prefWidth="600.0">
         <columnConstraints>
@@ -47,9 +46,9 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" />
-            <TextArea maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="75.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="tf_nom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" />
+            <TextArea fx:id="ta_description" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="75.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ChoiceBox fx:id="cb_categorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="59.0" />
@@ -60,19 +59,19 @@
               </rowConstraints>
                <children>
                   <Label prefHeight="24.0" prefWidth="83.0" text="euros à l'unité" GridPane.columnIndex="1" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="48.0" />
+                  <TextField fx:id="tf_tarif" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="48.0" />
                </children>
             </GridPane>
          </children>
       </GridPane>
-      <FlowPane prefHeight="45.0" prefWidth="600.0">
+      <FlowPane alignment="CENTER" columnHalignment="CENTER" orientation="VERTICAL" prefHeight="101.0" prefWidth="600.0">
          <children>
-            <Button mnemonicParsing="false" text="Button" />
-         </children>
-      </FlowPane>
-      <FlowPane prefHeight="56.0" prefWidth="600.0">
-         <children>
-            <Label text="Label" />
+            <Button fx:id="btn_create" alignment="CENTER" mnemonicParsing="false" text="Créer">
+               <FlowPane.margin>
+                  <Insets bottom="5.0" />
+               </FlowPane.margin>
+            </Button>
+            <Label fx:id="lbl_result" alignment="CENTER" />
          </children>
       </FlowPane>
    </children>
