--- a/src/views/javafx/window.fxml
+++ b/src/views/javafx/window.fxml
@@ -48,7 +48,6 @@
             </Label>
             <TextField fx:id="tf_nom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" />
             <TextArea fx:id="ta_description" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="75.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ChoiceBox fx:id="cb_categorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="59.0" />
@@ -62,6 +61,7 @@
                   <TextField fx:id="tf_tarif" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="48.0" />
                </children>
             </GridPane>
+            <ChoiceBox fx:id="cb_categorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -69,7 +69,7 @@
       </GridPane>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" orientation="VERTICAL" prefHeight="101.0" prefWidth="600.0">
          <children>
-            <Button fx:id="btn_create" alignment="CENTER" mnemonicParsing="false" text="Créer" onAction="#createClick">
+            <Button fx:id="btn_create" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer">
                <FlowPane.margin>
                   <Insets bottom="5.0" />
                </FlowPane.margin>
