--- a/src/views/javafx/window.fxml
+++ b/src/views/javafx/window.fxml
@@ -46,8 +46,8 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="tf_nom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" />
-            <TextArea fx:id="ta_description" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="75.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="tfNom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" />
+            <TextArea fx:id="taDescription" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="75.0" prefWidth="306.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="59.0" />
@@ -58,10 +58,10 @@
               </rowConstraints>
                <children>
                   <Label prefHeight="24.0" prefWidth="83.0" text="euros à l'unité" GridPane.columnIndex="1" />
-                  <TextField fx:id="tf_tarif" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="48.0" />
+                  <TextField fx:id="tfTarif" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="48.0" />
                </children>
             </GridPane>
-            <ChoiceBox fx:id="cb_categorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="cbCategorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -74,7 +74,7 @@
                   <Insets bottom="5.0" />
                </FlowPane.margin>
             </Button>
-            <Label fx:id="lbl_result" alignment="CENTER" />
+            <Label fx:id="lblResult" alignment="CENTER" />
          </children>
       </FlowPane>
    </children>
