--- a/src/views/javafx/window.fxml
+++ b/src/views/javafx/window.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -67,7 +69,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </GridPane>
-      <FlowPane alignment="CENTER" columnHalignment="CENTER" orientation="VERTICAL" prefHeight="101.0" prefWidth="600.0">
+      <FlowPane alignment="CENTER" columnHalignment="CENTER" minHeight="50.0" orientation="VERTICAL" prefHeight="70.0" prefWidth="600.0">
          <children>
             <Button fx:id="btn_create" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer">
                <FlowPane.margin>
@@ -75,6 +77,21 @@
                </FlowPane.margin>
             </Button>
             <Label fx:id="lblResult" alignment="CENTER" />
+         </children>
+      </FlowPane>
+      <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TableView fx:id="tvProduits" prefHeight="160.0" prefWidth="588.0">
+              <columns>
+                <TableColumn fx:id="colNom" prefWidth="92.0" text="Nom" />
+                <TableColumn fx:id="colDescription" prefWidth="259.0" text="Description" />
+                  <TableColumn fx:id="colTarif" minWidth="0.0" prefWidth="91.0" text="Tarif" />
+                  <TableColumn fx:id="colCategorie" prefWidth="157.0" text="Catégorie" />
+              </columns>
+               <FlowPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </FlowPane.margin>
+            </TableView>
          </children>
       </FlowPane>
    </children>
