--- a/src/views/javafx/window.fxml
+++ b/src/views/javafx/window.fxml
@@ -81,16 +81,19 @@
       </FlowPane>
       <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0">
          <children>
-            <TableView fx:id="tvProduits" prefHeight="160.0" prefWidth="588.0">
+            <TableView fx:id="tvProduits" prefHeight="160.0" prefWidth="590.0">
               <columns>
-                <TableColumn fx:id="colNom" prefWidth="92.0" text="Nom" />
-                <TableColumn fx:id="colDescription" prefWidth="259.0" text="Description" />
-                  <TableColumn fx:id="colTarif" minWidth="0.0" prefWidth="91.0" text="Tarif" />
-                  <TableColumn fx:id="colCategorie" prefWidth="157.0" text="Catégorie" />
+                <TableColumn fx:id="colNom" prefWidth="100.0" text="Nom" />
+                <TableColumn fx:id="colDescription" prefWidth="260.0" text="Description" />
+                  <TableColumn fx:id="colTarif" minWidth="50.0" text="Tarif" />
+                  <TableColumn fx:id="colCategorie" prefWidth="150.0" text="Catégorie" />
               </columns>
                <FlowPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </FlowPane.margin>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </children>
       </FlowPane>
