--- a/src/views/javafx/main.fxml
+++ b/src/views/javafx/main.fxml
@@ -78,7 +78,7 @@
                      </right></BorderPane>
                </content>
             </Tab>
-          <Tab text="Categorie">
+            <Tab text="Catégorie">
                <content>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" />
                </content>
@@ -111,9 +111,26 @@
                   </BorderPane>
                </content>
             </Tab>
-            <Tab text="Commande">
+          <Tab text="Commande">
                <content>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <center>
+                        <TableView fx:id="tvProduits1" prefHeight="160.0" prefWidth="590.0" BorderPane.alignment="CENTER">
+                           <columns>
+                              <TableColumn fx:id="colCmdCli" minWidth="70.0" prefWidth="100.0" text="Client" />
+                              <TableColumn fx:id="colCmdDate" minWidth="150.0" prefWidth="260.0" text="Date de commande" />
+                           </columns>
+                        </TableView>
+                     </center>
+                     <right>
+                        <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button fx:id="btnCmdAdd" mnemonicParsing="false" text="Ajouter" />
+                              <Button fx:id="btnCmdEdit" mnemonicParsing="false" text="Modifier" />
+                              <Button fx:id="btnCmdRem" mnemonicParsing="false" text="Supprimer" />
+                           </children>
+                        </VBox>
+                     </right></BorderPane>
                </content>
             </Tab>
         </tabs>
