--- a/src/views/javafx/main.fxml
+++ b/src/views/javafx/main.fxml
@@ -55,7 +55,7 @@
                <content>
                   <BorderPane prefHeight="200.0" prefWidth="200.0">
                      <center>
-                        <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tvClients" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <columns>
                             <TableColumn fx:id="colCliNom" prefWidth="75.0" text="Nom" />
                               <TableColumn fx:id="colCliPrenom" prefWidth="75.0" text="Prenom" />
@@ -82,7 +82,7 @@
                <content>
                   <BorderPane prefHeight="200.0" prefWidth="200.0">
                      <center>
-                        <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tvCategories" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                            <columns>
                               <TableColumn fx:id="colCategTitre" prefWidth="75.0" text="Titre" />
                            </columns>
@@ -134,7 +134,7 @@
                <content>
                   <BorderPane prefHeight="200.0" prefWidth="200.0">
                      <center>
-                        <TableView fx:id="tvProduits1" prefHeight="160.0" prefWidth="590.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tvCommandes" prefHeight="160.0" prefWidth="590.0" BorderPane.alignment="CENTER">
                            <columns>
                               <TableColumn fx:id="colCmdCli" minWidth="70.0" prefWidth="100.0" text="Client" />
                               <TableColumn fx:id="colCmdDate" minWidth="150.0" prefWidth="260.0" text="Date de commande" />
