--- a/src/views/javafx/NewClientView.fxml
+++ b/src/views/javafx/NewClientView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
@@ -44,8 +45,11 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="tfIdentifiant" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Identifiant" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="tfMotDePasse" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="tfIdentifiant" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Identifiant" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="4.0" />
+               </GridPane.margin>
+            </TextField>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -114,10 +118,19 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="tfNom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Nom" />
+                  <TextField fx:id="tfNom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Nom">
+                     <GridPane.margin>
+                        <Insets left="4.0" right="4.0" />
+                     </GridPane.margin>
+                  </TextField>
                   <TextField fx:id="tfPrenom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Prenom" GridPane.columnIndex="1" />
                </children>
             </GridPane>
+            <PasswordField fx:id="pfMotDePasse" maxWidth="-Infinity" prefHeight="25.0" prefWidth="150.0" promptText="Mot  de passe" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="4.0" right="4.0" />
+               </GridPane.margin>
+            </PasswordField>
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
