--- a/src/views/javafx/NewCommandView.fxml
+++ b/src/views/javafx/NewCommandView.fxml
@@ -78,7 +78,7 @@
       </GridPane>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" minHeight="50.0" orientation="VERTICAL" prefHeight="70.0" prefWidth="600.0">
          <children>
-            <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer">
+            <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer" onAction="#createClick" >
                <FlowPane.margin>
                   <Insets bottom="5.0" />
                </FlowPane.margin>
