--- a/src/views/javafx/NewClientView.fxml
+++ b/src/views/javafx/NewClientView.fxml
@@ -45,11 +45,33 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
+            <GridPane GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="163.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="277.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="tfNom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Nom">
+                     <GridPane.margin>
+                        <Insets left="4.0" right="4.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="tfPrenom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Prenom" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
             <TextField fx:id="tfIdentifiant" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Identifiant" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="4.0" />
                </GridPane.margin>
             </TextField>
+            <PasswordField fx:id="pfMotDePasse" maxWidth="-Infinity" prefHeight="25.0" prefWidth="150.0" promptText="Mot  de passe" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="4.0" right="4.0" />
+               </GridPane.margin>
+            </PasswordField>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -82,20 +104,15 @@
                   </GridPane>
                   <GridPane prefHeight="30.0" prefWidth="359.0" GridPane.rowIndex="1">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="90.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="135.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="325.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="97.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="111.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="244.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="tfAdrPays" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="127.0" promptText="Pays" GridPane.columnIndex="2">
-                           <GridPane.margin>
-                              <Insets left="4.0" right="4.0" />
-                           </GridPane.margin>
-                        </TextField>
-                        <TextField fx:id="tfAdrCodePostal" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" promptText="Code postal">
+                        <TextField fx:id="tfAdrCodePostal" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="53.0" promptText="Code postal">
                            <GridPane.margin>
                               <Insets left="4.0" right="4.0" />
                            </GridPane.margin>
@@ -105,32 +122,15 @@
                               <Insets left="4.0" right="4.0" />
                            </GridPane.margin>
                         </TextField>
+                        <TextField fx:id="tfAdrPays" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="127.0" promptText="Pays" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets left="4.0" right="4.0" />
+                           </GridPane.margin>
+                        </TextField>
                      </children>
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="163.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="277.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TextField fx:id="tfNom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Nom">
-                     <GridPane.margin>
-                        <Insets left="4.0" right="4.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField fx:id="tfPrenom" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" promptText="Prenom" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <PasswordField fx:id="pfMotDePasse" maxWidth="-Infinity" prefHeight="25.0" prefWidth="150.0" promptText="Mot  de passe" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="4.0" right="4.0" />
-               </GridPane.margin>
-            </PasswordField>
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
