--- a/src/views/javafx/MainView.fxml
+++ b/src/views/javafx/MainView.fxml
@@ -83,6 +83,11 @@
                      <top>
                         <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
                            <children>
+                              <Button fx:id="btnRefresh" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                              </Button>
                               <Button fx:id="btnSearchClient" mnemonicParsing="false" text="Rechercher">
                                  <graphic>
                                     <TextField fx:id="tfSearchClient" promptText="Rechercher..." />
