add refresh and search button on every tab

--- a/src/views/javafx/MainView.fxml
+++ b/src/views/javafx/MainView.fxml
@@ -83,7 +83,7 @@
                      <top>
                         <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Button fx:id="btnRefresh" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
+                              <Button fx:id="btnRefreshClient" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
                                  <HBox.margin>
                                     <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                                  </HBox.margin>
@@ -125,7 +125,29 @@
                               <Button fx:id="btnCategRem" mnemonicParsing="false" onAction="#delCategClick" text="Supprimer" />
                            </children>
                         </VBox>
-                     </right></BorderPane>
+                     </right>
+                     <top>
+                        <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button fx:id="btnRefreshCateg" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="btnSearchCateg" mnemonicParsing="false" text="Rechercher">
+                                 <graphic>
+                                    <TextField fx:id="tfSearchCateg" promptText="Rechercher..." />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </top></BorderPane>
                </content>
             </Tab>
             <Tab text="Produit">
@@ -234,6 +256,28 @@
                            </children>
                         </GridPane>
                      </bottom>
+                     <top>
+                        <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button fx:id="btnRefreshProd" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="btnSearchProd" mnemonicParsing="false" text="Rechercher">
+                                 <graphic>
+                                    <TextField fx:id="tfSearchProd" promptText="Rechercher..." />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </top>
                   </BorderPane>
                </content>
             </Tab>
@@ -256,7 +300,29 @@
                               <Button fx:id="btnCmdRem" mnemonicParsing="false" onAction="#delCmdClick" text="Supprimer" />
                            </children>
                         </VBox>
-                     </right></BorderPane>
+                     </right>
+                     <top>
+                        <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button fx:id="btnRefreshCommand" alignment="CENTER_RIGHT" mnemonicParsing="false" text="Actualiser">
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="btnSearchCommand" mnemonicParsing="false" text="Rechercher">
+                                 <graphic>
+                                    <TextField fx:id="tfSearchCommand" promptText="Rechercher..." />
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                 </HBox.margin>
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </top></BorderPane>
                </content>
             </Tab>
         </tabs>
