--- a/src/views/javafx/MainView.fxml
+++ b/src/views/javafx/MainView.fxml
@@ -2,13 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioMenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -33,22 +30,17 @@
    <children>
       <MenuBar GridPane.rowIndex="1">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="Fichier">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" text="Ajout de Client" />
+                  <MenuItem mnemonicParsing="false" onAction="#createCategClick" text="Ajout de catégorie" />
+                  <MenuItem mnemonicParsing="false" onAction="#createProdClick" text="Ajout de produit" />
+                  <MenuItem mnemonicParsing="false" onAction="#createCmdClick" text="Ajout de commande" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Option">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <CheckMenuItem mnemonicParsing="false" text="Unspecified Action" />
-                  <RadioMenuItem mnemonicParsing="false" text="Unspecified Action" />
+                  <Menu fx:id="menuPersistance" mnemonicParsing="false" text="Changer de mode" />
             </items>
           </Menu>
         </menus>
