--- a/src/views/javafx/NewCommandView.fxml
+++ b/src/views/javafx/NewCommandView.fxml
@@ -17,16 +17,16 @@
    <children>
       <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: black; -fx-border-width: 2;">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="340.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="120.0" prefHeight="150.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="164.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="140.0" prefWidth="164.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="432.0" />
               </columnConstraints>
               <rowConstraints>
@@ -78,7 +78,7 @@
       </GridPane>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" minHeight="50.0" orientation="VERTICAL" prefHeight="70.0" prefWidth="600.0">
          <children>
-            <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer" onAction="#createClick" >
+            <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer">
                <FlowPane.margin>
                   <Insets bottom="5.0" />
                </FlowPane.margin>
